1. 修改编译警告 2. 增加ignore文件 3. 修改pom，增加源码生成插件